@@ -3,11 +3,16 @@ use inc::Module::Install;
 name     'UFL-WebAdmin-SiteDeploy';
 all_from 'lib/UFL/WebAdmin/SiteDeploy.pm';
 
-requires 'Class::Accessor::Fast';
+requires 'Cwd';
+requires 'IO::String';
 requires 'Log::Log4perl';
 requires 'Moose';
 requires 'Moose::Role';
 requires 'Moose::Util::TypeConstraints';
+requires 'MooseX::App::Cmd';
+requires 'MooseX::App::Cmd::Command';
+requires 'MooseX::Getopt';
+requires 'MooseX::Getopt::Meta::Attribute',
 requires 'Path::Class::Dir';
 requires 'SVN::Client';
 requires 'SVN::Notify';
@@ -15,20 +20,21 @@ requires 'SVN::Notify::Config';
 requires 'SVN::Notify::Mirror::Rsync';
 requires 'UFL::WebAdmin::SVN';
 requires 'URI';
+requires 'URI::file';
+requires 'YAML';
 
 # For script/*.sh
 requires_external_bin '/bin/sh';
-requires_external_bin '/usr/bin/perl';
-requires_external_bin '/usr/bin/svnlook';
+requires_external_bin '/usr/bin/env';
+requires_external_bin 'perl';
 requires_external_bin 'sudo';
 
-# All for SVN::Notify::Mirror::Rsync::AutoCreateCheckout
+# All for SVN::Notify::Mirror::Rsync::AutoCheckout
 requires_external_bin 'rsync';
 requires_external_bin 'ssh';
 requires_external_bin 'svn';
 requires_external_bin 'svnlook';
 
-build_requires 'Cwd';
 build_requires 'File::Path';
 build_requires 'File::Spec';
 build_requires 'FindBin';
