@@ -1,0 +1,7 @@
+#!/usr/bin/env perl
+
+use strict;
+use warnings;
+use UFL::WebAdmin::SiteDeploy;
+
+UFL::WebAdmin::SiteDeploy->run;
