@@ -1,0 +1,13 @@
+K 10
+svn:author
+V 3
+dwc
+K 8
+svn:date
+V 27
+2008-06-04T23:55:17.284212Z
+K 7
+svn:log
+V 55
+Add a configuration file for testing new deploy command
+END
