@@ -8,6 +8,8 @@ Revision history for UFL-WebAdmin-SiteDeploy
         - Rename SVN::Notify::Mirror::Rsync::AutoCreateCheckout to
           SVN::Notify::Mirror::Rsync::AutoCheckout
         - Add logging of mirror operations using Log::Log4perl
+        - Convert ufl_webadmin_sitedeploy_update_site.sh to a more
+          flexible system using MooseX::App::Cmd
 
 0.03  Mon Mar 31 19:31:33 EDT 2008
         - Add dependencies on the explicit path of binaries used in
